corrected alignment for mobile to larger screens on every grid above the weatherChannel / messing around with colors and shadow effects

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -14,3 +14,12 @@ $osmosis-jones: #0d4e90;
 $mr-popo: #202426;
 $casper: #ffffff;
 $buu: #e52666;
+// serious colors
+$oxblood: #4A0404;
+$sienna: #A0522D;
+$cinnamon: #D27D2D;
+$mango: #F4BB44;
+$malachite: #0BDA51;
+$spring-green: #00FF7F;
+$pear: #C9CC3F;
+$smoke: #848884;
